--- a/templates/user.html
+++ b/templates/user.html
@@ -3,7 +3,7 @@
     
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Become a Rider - GoRide</title>
+    <title>Become a Customer to Safaris</title>
     <style>
         body {
             font-family: Arial, sans-serif;
