--- a/templates/index.html
+++ b/templates/index.html
@@ -116,8 +116,8 @@
             background-color: #333;
             color: white;
             text-align: center;
-            padding: 10px 0;
-            margin-top: auto;
+            padding: 20px 0;
+            margin-top: 50px;
         }
     </style>
 </head>
@@ -160,11 +160,11 @@
         </section>
     </main>
 
-<footer>
-    <div class="foot">
-        <p>&copy; 2024 Safaris. All rights reserved.</p>
-    </div>
-</footer>
+    <footer>
+        <div class="container">
+            <p>&copy; 2024 GoRide. All rights reserved.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
