--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -136,7 +136,7 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Sararis. All rights reserved.</p>
+            <p>&copy; 2024 GoRide. All rights reserved.</p>
         </div>
     </footer>
 </body>
