linked html files

--- a/templates/index.html
+++ b/templates/index.html
@@ -76,7 +76,7 @@
 
         .cta-button {
             display: inline-block;
-            background-color: #00a86b;
+            /* background-color: #00a86b; */
             color: white;
             padding: 15px 30px;
             text-decoration: none;
@@ -125,10 +125,10 @@
 <body>
     <header>
         <div class="container">
-            <nav>
-                <div class="nav-links"><a href="/index.html">Safaris</a></div>
-                <ul class="nav-links">
-                    <li><a href="/joinus.html">Join Us</a></li>
+            <nav class="nav-links">
+                <div class="cta-button"><a href="index">Safaris</a></div>
+                <ul>
+                    <li class="cta-button"><a href="joinus">Join Us</a></li>
 
                 </ul>
             </nav>
@@ -140,7 +140,7 @@
             <div class="container">
                 <h1>Welcome to Safaris</h1>
                 <p>Your reliable transport-sharing platform</p>
-                <class="cta-button">Get Started
+                <class="cta-button"> <a href="joinus"></a>Get Started
             </div>
         </section>
 
