Feat: Add blockchain code

--- a/templates/driver.html
+++ b/templates/driver.html
@@ -144,6 +144,10 @@
         </section>
     </main>
 
+    <pre>
+        {{.Driver}}
+    </pre>
+
     <footer>
         <div class="container">
             <p>&copy; 2023 GoRide. All rights reserved.</p>
