--- a/templates/joinus.html
+++ b/templates/joinus.html
@@ -32,6 +32,7 @@
         .logo {
             font-size: 24px;
             font-weight: bold;
+            text-decoration: none;
         }
         .nav-links {
             list-style: none;
@@ -129,12 +130,11 @@
             <div class="option">
                 <h2>Become a Driver</h2>
                 <p>Start earning money by driving on your own schedule. Be your own boss and enjoy the flexibility of choosing when and where to drive.</p>
-                <a class="join-button">Sign Up as Driver</a>
-            </div>
+                <a class="join-button"> <a href="driver">Sign Up as Driver</a></div>
             <div class="option">
                 <h2>Ride with Us</h2>
                 <p>Sign up as a rider and enjoy safe, reliable, and affordable rides whenever you need them. Get to your destination hassle-free!</p>
-                <div  class="join-button">Sign Up as Rider</div>
+                <div  class="join-button"> <a href="user">Sign Up as Customer</a></div>
             </div>
         </section>
     </main>
