--- a/templates/user.html
+++ b/templates/user.html
@@ -104,9 +104,8 @@
             <nav>
                 <div class="logo">Safaris</div>
                 <ul class="nav-links">
-                    <li><a >Home</a></li>
-                    <li><a 
-                        >Join Us</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="joinus">Join Us</a></li>
                 </ul>
             </nav>
         </div>
