--- a/templates/driver.html
+++ b/templates/driver.html
@@ -104,8 +104,8 @@
             <nav>
                 <div class="logo">GoRide</div>
                 <ul class="nav-links">
-                    <li><a >Home</a></li>
-                    <li><a >Join Us</a></li>
+                    <li><a href="index">Home</a></li>
+                    <li><a href="joinus">Join Us</a></li>
                 </ul>
             </nav>
         </div>
