Chore: Align the output rightt

--- a/templates/driver.html
+++ b/templates/driver.html
@@ -156,7 +156,7 @@
 
         <section>
             <div class="form-container">
-                <form id="driver-form">
+                <form id="driver-form" method="post">
                     <div class="form-group">
                         <label for="full-name">Full Name</label>
                         <input type="text" id="full-name" name="full-name" required>
