link bid page to the customer page

--- a/templates/bid.html
+++ b/templates/bid.html
@@ -182,7 +182,7 @@
         <div class="container">
             <h1>Ride Bidding</h1>
             <form id="bidForm">
-                <div class="form-group">
+                <div class="form-group" action="bid">
                     <label for="userBid">User Bid (KES):</label>
                     <input type="number" id="userBid" name="userBid" step="1" required>
                 </div>
