--- a/templates/user.html
+++ b/templates/user.html
@@ -172,7 +172,7 @@
                         <label for="phone">Phone Number</label>
                         <input type="tel" id="phone" name="phone" required>
                     </div>
-                    <button type="submit" class="submit-button">Sign Up as Rider</button>
+                    <button type="submit" class="submit-button"><a href="bid">Sign-Up</a></button>
                 </form>
             </div>
         </section>
